--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -1,4 +1,4 @@
-upsteam ironman {
+upstream ironman {
     ip_hash;
     server 127.0.0.1:8080;
     keepalive 64;
@@ -6,7 +6,12 @@ upsteam ironman {
 
 server {
     listen 80;
+    listen 443 ssl;
     server_name ironman.tonatasha.com;
+
+    ssl_certificate <seriously>;
+    ssl_certificate_key <hah>;
+
     location / {
         proxy_pass http://ironman;
         proxy_http_version 1.1;
@@ -17,5 +22,10 @@ server {
         proxy_set_header Access-Control-Allow-Methods "GET, POST, OPTIONS, DELETE, PUT, PATCH";
         proxy_set_header Access-Control-Allow-Headers "Accept, Content-Type";
         proxy_set_header Access-Control-Allow-Credentials "true";
+    }
+
+    location ~ /\.well-known/ {
+        allow all;
+        root /usr/share/nginx/html;
     }
 }
